--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="icon" type="image/icon" href="favicon.ico" >
-    <title>Celestial [CELC] Block Explorer</title>
+    <title>Amity [AMIT] Blockexplorer</title>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.0/jquery.timeago.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-sparklines/2.1.2/jquery.sparkline.min.js"></script>
@@ -27,7 +27,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand " href="#"><img src="logo.png"> <strong>Celestial</strong></a>
+            <a class="navbar-brand " href="#"><img src="logo.png"> <strong>Amity</strong></a>
 			<div id="stats_updated"><i class="fa fa-bolt"></i></div>
         </div>
 
@@ -44,13 +44,13 @@
                     <i class="fa fa-exchange" aria-hidden="true"></i> Check TXNs
                 </a></li>
 
-		<li><a class="hot_link" data-page="pools.html" href="#pools">
+		<!-- li><a class="hot_link" data-page="pools.html" href="#pools">
                     <i class="fa fa-gavel" aria-hidden="true"></i> Pools
-                </a></li>
+                </a></li -->
 
-		<li><a class="hot_link" data-page="api.html" href="#api">
+		<!-- li><a class="hot_link" data-page="api.html" href="#api">
                     <i class="fa fa-code" aria-hidden="true"></i> API
-                </a></li>
+                </a></li -->
 
                 <li style="display:none;"><a class="hot_link" data-page="blockchain_block.html" href="#blockchain_block"><i class="fa fa-cubes"></i> Block
                 </a></li>
