--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand " href="#"><img src="logo.png"> <strong>Amity</strong></a>
+            <a class="navbar-brand " href="#"><img src="img/logo.png"> <strong>Amity</strong></a>
 			<div id="stats_updated"><i class="fa fa-bolt"></i></div>
         </div>
 
