--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ $('#txt_search').keyup(function(e){
 			</div>
 			<div class="col-lg-4 col-md-3 col-sm-3 text-center">
                                 <ul class="list-unstyled">
-				        <li><i class="fab fa-discord"><a href="https://discord.gg/nxunxz"></a></i></li>
+				        <li><a href="https://discord.gg/nxunxz"><img src="img/discord.png"></a></li>
 
                                </ul>
 			</div>
