--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header nav-custom">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Menu</span>
                 <span class="icon-bar"></span>
