--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="js/main.js"></script>
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
 	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -29,7 +30,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand " href="#"><img src="img/logo.png"> <strong>Amity</strong></a>
+            <a class="navbar-brand " href="#"><img src="img/logo.png"> <strong><span style="font-family: 'Montserrat', sans-serif;">AmityCoin</span></strong></a>
 			<div id="stats_updated"><i class="fa fa-bolt"></i></div>
         </div>
 
