--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand " href="#"><img src="img/logo.png"> <strong><span style="font-family: 'Montserrat', sans-serif;">AmityCoin</span></strong></a>
+            <a class="navbar-brand " href="https://www.getamitycoin.org"><img src="img/logo.png"> <strong><span style="font-family: 'Montserrat', sans-serif;">AmityCoin</span></strong></a>
 			<div id="stats_updated"><i class="fa fa-bolt"></i></div>
         </div>
 
